fixed overflow on /guide/

--- a/mysite/static/css/base/base.css
+++ b/mysite/static/css/base/base.css
@@ -276,7 +276,7 @@ body#people-map #search_engine_is_down_message { float: left; display: block; ma
 }
 
 .fairly-big {
-    font-size: 1.8em;
+    font-size: 1.7em;
 }
 
 .enormous > div {
